--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +13,7 @@
     "@reown/appkit-adapter-ethers": "1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.8",
     "@tanstack/react-query": "^5.80.2",
+    "courier-client-sdk": "^1.0.14",
     "ethers": "^6.13.4",
     "next": "15.3.0",
     "react": "19.0.0",
